<?xml version="1.0"?>
<package format="3">
  <name>autoware_launch</name>
  <version>0.49.0</version>
  <description>The autoware_launch package</description>

  <maintainer email="yukihiro.saito@tier4.jp">Yukihiro Saito</maintainer>
  <maintainer email="ryohsuke.mitsudome@tier4.jp">Ryohsuke Mitsudome</maintainer>
  <maintainer email="mfc@leodrive.ai">M. Fatih Cırıt</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>autoware_adapi_adaptors</exec_depend>
  <exec_depend>autoware_carla_interface</exec_depend>
  <exec_depend>autoware_diagnostic_graph_aggregator</exec_depend>
  <exec_depend>autoware_diagnostic_graph_utils</exec_depend>
  <exec_depend>autoware_dummy_infrastructure</exec_depend>
  <exec_depend>autoware_global_parameter_loader</exec_depend>
  <exec_depend>python3-bson</exec_depend>
  <exec_depend>python3-tornado</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tier4_autoware_api_launch</exec_depend>
  <exec_depend>tier4_control_launch</exec_depend>
  <exec_depend>tier4_localization_launch</exec_depend>
  <exec_depend>tier4_map_launch</exec_depend>
  <exec_depend>tier4_perception_launch</exec_depend>
  <exec_depend>tier4_planning_launch</exec_depend>
  <exec_depend>tier4_sensing_launch</exec_depend>
  <exec_depend>tier4_simulator_launch</exec_depend>
  <exec_depend>tier4_system_launch</exec_depend>
  <exec_depend>tier4_vehicle_launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <autoware_guideline_check file="test/autoware_guideline_check.yaml"/>
  </export>
</package>
