<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_sample_deployment</name>
  <version>0.47.0</version>
  <description>The autoware_sample_deployment package</description>
  <maintainer email="taekjin.lee@tier4.jp">Taekjin Lee</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_system_designer</depend>

  <exec_depend>sample_vehicle_description</exec_depend>
  <exec_depend>sample_sensor_kit_description</exec_depend>
  <exec_depend>sample_sensor_kit_launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
