<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carla_sensor_kit_description</name>
  <version>1.0.0</version>
  <description>The carla_sensor_kit_description package - Sensor kit calibration for CARLA simulator</description>
  <maintainer email="noreply@example.com">Autoware Maintainer</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>velodyne_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
