<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>palta_sensor_kit_launch</name>
  <version>0.50.0</version>
  <description>The palta_sensor_kit_launch package</description>
  <maintainer email="beginning.fan@autocore.ai">beginning.fan</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>autoware_imu_corrector</exec_depend>
  <exec_depend>autoware_launch</exec_depend>
  <exec_depend>autoware_pointcloud_preprocessor</exec_depend>
  <exec_depend>autoware_vehicle_info_utils</exec_depend>
  <exec_depend>autoware_vehicle_velocity_converter</exec_depend>
  <exec_depend>common_sensor_launch</exec_depend>
  <exec_depend>nebula_hesai</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tamagawa_imu_driver</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>palta_sensor_kit_description</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
